--- a/jobs.html
+++ b/jobs.html
@@ -90,7 +90,8 @@
                         <div class="w3-card w3-white">
                             <div class="w3-container w3-padding">
                                 <div class="w3-padding-8">
-                                    <input id="post" type="text" placeholder="Post your own Job Offer" class="w3-border w3-padding" style="width:100%;" />
+                                    <input id="post" type="text" placeholder="Post your own Job Offer" class="w3-border w3-padding"
+                                        style="width:100%;" />
                                 </div>
                                 <table>
                                     <td>
@@ -100,11 +101,17 @@
                                     <td>
                                         <button type="button" onclick="image_upload();" class="w3-button w3-theme-d2">
                                             <i class="fa fa-photo "></i> Photo</button>
-                                        <input id='upload_button' type='file' onchange="image_pick();" hidden/>
+                                        <input id='upload_button' type='file' onchange="image_pick();" hidden />
                                     </td>
                                     <td id="img_picked" class="w3-opacity">
                                     </td>
+                                    <td></td>
                                 </table>
+                                <div class="w3-padding-8 w3-opacity-min">
+                                    <a href="user_jobs.html" class="w3-link">
+                                        <i class="fa fa-list"></i> View your current Job Offers
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -115,8 +122,10 @@
                     <h4>Title</h4>
                     <p>Submitted by <a href="user_profile.html" class="w3-link">Profile #1</a> </p>
                     <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
                         aliquip ex ea commodo consequat.
                     </p>
                     <img src="images/lights.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
@@ -129,8 +138,10 @@
                     <h4>Title</h4>
                     <p>Submitted by <a href="user_profile.html" class="w3-link">Profile #2</a> </p>
                     <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
                         aliquip ex ea commodo consequat.
                     </p>
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
@@ -142,8 +153,10 @@
                     <h4>Title</h4>
                     <p>Submitted by <a href="user_profile.html" class="w3-link">Profile #3</a> </p>
                     <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
                         aliquip ex ea commodo consequat.
                     </p>
                     <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
