Updated welcome page.

--- a/register.html
+++ b/register.html
@@ -28,7 +28,11 @@
 
             <!-- Left Column -->
             <div class="w3-col m8">
-                <h1 class="w3-outline">WorkConnect</h1>
+                <h1 style=font-size:50px class="w3-outline">WorkConnect</h1>
+                <br>
+                <h3 class="w3-outline">Manage your professional identity.</h3>
+                <h3 class="w3-outline">Build and engage with your professional network.</h3>
+                <h3 class="w3-outline">Access knowledge, insights and opportunities.</h3>
             </div>
             <!-- End Left Column -->
 
