--- a/login.html
+++ b/login.html
@@ -28,7 +28,11 @@
 
             <!-- Left Column -->
             <div class="w3-col m8">
-                <h1 class="w3-outline">WorkConnect</h1>
+                <h1 style=font-size:50px class="w3-outline">WorkConnect</h1>
+                <br>
+                <h3 class="w3-outline">Manage your professional identity.</h3>
+                <h3 class="w3-outline">Build and engage with your professional network.</h3>
+                <h3 class="w3-outline">Access knowledge, insights and opportunities.</h3>
             </div>
             <!-- End Left Column -->
 
@@ -39,14 +43,14 @@
                         <table style="width:100%">
                             <tr>
                                 <div class="w3-row w3-padding" style="width:100%;">
-                                    <input id="email" type="email" placeholder="Email" onkeyup="check_form(this.id);" class="w3-border w3-padding w3-margin-top"
-                                        style="width:100%;" required/>
+                                    <input id="email" type="email" placeholder="Email" onkeyup="check_form(this.id);"
+                                        class="w3-border w3-padding w3-margin-top" style="width:100%;" required />
                                 </div>
                             </tr>
                             <tr>
                                 <div class="w3-row w3-padding" style="width:100%;">
-                                    <input id="password" type="password" placeholder="Password" onkeyup="check_form(this.id);" class="w3-border w3-padding" style="width:100%;"
-                                        required/>
+                                    <input id="password" type="password" placeholder="Password" onkeyup="check_form(this.id);"
+                                        class="w3-border w3-padding" style="width:100%;" required />
                                 </div>
                             </tr>
                             <tr>
